# videoRAG

./: .env.example  .gitignore  README.md  app.py  pyproject.toml  requirements.txt
data/: transcripts.json  transcripts_merged.json  video_links.txt
qdrant_storage/: raft_state.json
qdrant_storage/collections/game_trailers/0/: newest_clocks.json  replica_state.json
qdrant_storage/collections/game_trailers/0/segments/45f6ab96-6ae8-4697-ae95-41ce393956f5/: mutable_id_tracker.mappings
qdrant_storage/collections/game_trailers/0/segments/77746ade-e8f6-4675-82cf-87a6c265b66b/: mutable_id_tracker.mappings
qdrant_storage/collections/game_trailers/0/segments/ed1574c7-c669-4904-8e21-90c823afb493/: mutable_id_tracker.mappings
qdrant_storage/collections/game_trailers/0/segments/f25d2e88-5d86-4c13-949b-ba039162764c/: mutable_id_tracker.mappings  mutable_id_tracker.versions
scene_recognition_model/: deploy.py
src/: config.py  ingestion.py  pipeline.py
src/embedder/: describe_scene.py  embed_clips.py
src/retriever/: generate.py  search.py
src/utils/: download_subs.py  download_vids.py  extract_keyframes.py  merge_subs_timeframes.py  qdrant_utils.py
