[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[project]
name = "videorag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.14.1",
    "google-genai[aiohttp]>=2.8.0",
    "openai>=2.43.0",
    "python-dotenv>=1.2.2",
    "qdrant-client>=1.18.0",
    "scenedetect>=0.7",
    "tqdm>=4.68.3",
    "youtube-transcript-api>=1.2.4",
    "yt-dlp>=2026.6.9",
]
